--- a/forums.html
+++ b/forums.html
@@ -15,7 +15,6 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
-  <link rel="stylesheet" href="assets/snow-plugins/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -55,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free web builder</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="htmlblock-block-a" data-rv-view="10" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a href="https://mobirise.info/c">web builder</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="htmlblock-block-a" data-rv-view="10" style="background-color: rgb(255, 255, 255);">
 	<style>.block {padding-bottom:0px; padding-top:0px;}</style>		
             
 
@@ -84,8 +83,8 @@
 	
 </section>
 
-<section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="htmlblock-block-d" data-rv-view="160" style="background-color: rgb(255, 255, 255);">
-	<style>.block {padding-bottom:0px; padding-top:0px;}</style>		
+<section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="htmlblock-block-a" data-rv-view="12" style="background-color: rgb(255, 255, 255);">
+	<style>.block {padding-bottom:40px; padding-top:40px;}</style>		
             
 
     <div class="mbr-section__container mbr-section__container--isolated container">
@@ -101,8 +100,7 @@
                         <div class="mbr-article mbr-article--auto-align mbr-article--wysiwyg"><div class="tiny"><!--Begin Website Toolbox Forum Embed Code-->
 <div id="wtEmbedCode"><script type="text/javascript" id="embedded_forum" src="https://aurorionz.discussion.community/js/mb/embed.js"></script>
 <noscript>&lt;a href="https://aurorionz.discussion.community/"&gt;Forum&lt;/a&gt;</noscript></div>
-<!--End Website Toolbox Forum Embed Code-->
-</div>
+<!--End Website Toolbox Forum Embed Code--></div>
 						</div>
                     </div>
                 </div>
@@ -125,7 +123,6 @@
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/snow-plugins/schnee.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
