--- a/forums.html
+++ b/forums.html
@@ -26,7 +26,7 @@
 
     
 
-    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center collapsed">
+    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top navbar-toggleable-sm">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <div class="hamburger">
                 <span></span>
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build a website</a></section><section class="header1 cid-ri3ZdW8Bp5 mbr-parallax-background" id="header1-f">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="header1 cid-ri3ZdW8Bp5 mbr-parallax-background" id="header1-f">
 
     
 
