--- a/what-is-atera.html
+++ b/what-is-atera.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="header12 cid-ri39Andi0Q mbr-fullscreen mbr-parallax-background" id="header12-4">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="header12 cid-ri39Andi0Q mbr-fullscreen mbr-parallax-background" id="header12-4">
 
     
 
@@ -203,7 +203,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you, we appreciate your suggestion!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Qx8sbEepv6ASeLBQePoQ/97CvO+/fOcEGaGaivotLPDUKDysIKIztKv4FvV6qxJfuMgSl3cSdUC97T+aFaZSoUJRxpb34blqZlpal46rVxmfwhpteUIqvfBjYpKsH4Ek">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="N2L75YsRbozE5eqn/YM3Xb8ZWxinvU5zAqUR/PbO4JtBhONw327YdcsRG00HqrVsPlPRKdIZ2yXUS2oI3kzN54Vd9QqtHmTFubShaiD5Zv9st6G9QWE2qoxVRh6r0Y1U">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
