--- a/what-is-atera.html
+++ b/what-is-atera.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="header12 cid-ri39Andi0Q mbr-fullscreen mbr-parallax-background" id="header12-4">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="header12 cid-ri39Andi0Q mbr-fullscreen mbr-parallax-background" id="header12-4">
 
     
 
@@ -203,11 +203,11 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you, your suggestion is always appreciated</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="1di45faeBBqav8B+fEtwLqaNI9HFnBOhqRqHPw6MCtq2IJGlxWWUxRICmWwyZkwkylSRn/cjNqeL4S1ctgGeVPGf1IUIXQv/TeTPcFX4Jcl63DsuqcuXuBmES9QWk+4K">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="4tUMKivto666RWSeApfs/p/iYX3NgEbmyFniRdTK0xGRtdglKWy9wvbBbFJlUWxNzg3aKQ9uPmosKLY6GxyWqw8gzUwsz+OhRkTCGVvlMmAp0ka6snccf2U7ClUpAh/B">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
-                                    <label class="form-control-label mbr-fonts-style display-7" for="name-form1-b">Name (in-game name)</label>
+                                    <label class="form-control-label mbr-fonts-style display-7" for="name-form1-b">Name</label>
                                     <input type="text" class="form-control" name="name" data-form-field="Name" required="" placeholder="Minecraft Name" id="name-form1-b">
                                 </div>
                             </div>
