--- a/what-is-atera.html
+++ b/what-is-atera.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build a site</a></section><section class="header12 cid-ri39Andi0Q mbr-fullscreen mbr-parallax-background" id="header12-4">
+<section class="engine"><a href="https://mobirise.info/c">web builder</a></section><section class="header12 cid-ri39Andi0Q mbr-fullscreen mbr-parallax-background" id="header12-4">
 
     
 
@@ -203,7 +203,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you, your suggestion is always appreciated</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="GUc2xwOsFAZJRbFp9G4UBtGZudaBShe+9L/SxblAG2dD1mRh4sXH9dbCPszzaH0polC3luhjbiB9qbee0FUIGygxcVM2k52/qJ+toVuqc+pq+gfnKV5NsqwJGFKVTFi9">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="aspHDggLON74nIObn1N8hzEc3B3w5aiVHxsONUnzU6cgvXKlyxtby0AKzES+XW2YImQnEK0l2x4a0pFc6BhSZnFBvkfTr7e6iv1meMD6ajTrHT3fChR7GukBT+RZYufS">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
