--- a/what-is-atera.html
+++ b/what-is-atera.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="header12 cid-ri39Andi0Q mbr-fullscreen mbr-parallax-background" id="header12-4">
+<section class="engine"><a href="https://mobirise.info/y">free html website templates</a></section><section class="header12 cid-ri39Andi0Q mbr-fullscreen mbr-parallax-background" id="header12-4">
 
     
 
@@ -203,7 +203,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you, your suggestion is always appreciated</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="7f5eSmThheMkPw/pDkaZ3ZhHQGHOyzkiAEm59345JiAaBEpF9CsR6OwjC3RN1DENfqsCJWonDwOEK9yyXTCerZ0RarIhfa+otEqZS+NuyM3JWHxXejAcCEyRNcrTsfDX">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="GPbEGj7ZXT9QftKuGw6GMgkrmPMa3h01e6/x+VbudoXc3J8Ch0t+ljbMURBe3lADJaVdBRNkNu6Xul+C1AHwZ+LM/MePqw2EiWN0NPYS1OmpYIcGX7QBWDrf9oHuecZ4">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
