--- a/forums.html
+++ b/forums.html
@@ -47,14 +47,14 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="wia.html"><span class="mbri-preview mbr-iconfont mbr-iconfont-btn"></span>What is Atera?</a>
+                    <a class="nav-link link text-white display-4" href="what-is-atera.html"><span class="mbri-preview mbr-iconfont mbr-iconfont-btn"></span>What is Atera?</a>
                 </li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section class="header1 cid-ri3ZdW8Bp5 mbr-parallax-background" id="header1-f">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="header1 cid-ri3ZdW8Bp5 mbr-parallax-background" id="header1-f">
 
     
 
