--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="wia.html"><span class="mbri-preview mbr-iconfont mbr-iconfont-btn"></span>What is Atera?</a>
+                    <a class="nav-link link text-white display-4" href="what-is-atera.html"><span class="mbri-preview mbr-iconfont mbr-iconfont-btn"></span>What is Atera?</a>
                 </li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/g">how to build a site for free</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
