--- a/what-is-atera.html
+++ b/what-is-atera.html
@@ -42,7 +42,7 @@
                          <img src="assets/images/logo-184x184.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html">Atera</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://ateramh.github.io/index.html">Atera</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">website maker</a></section><section class="header12 cid-ri39Andi0Q mbr-fullscreen mbr-parallax-background" id="header12-4">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="header12 cid-ri39Andi0Q mbr-fullscreen mbr-parallax-background" id="header12-4">
 
     
 
@@ -67,7 +67,7 @@
                         WHAT IS ATERA?</h1>
                     <p class="mbr-text pb-3 mbr-white mbr-fonts-style display-5">
                         This page shows what Atera is and what we do here!</p>
-                    <div class="mbr-section-btn align-center py-2"><a class="btn btn-md btn-secondary display-4" href="index.html">HOME</a></div>
+                    <div class="mbr-section-btn align-center py-2"><a class="btn btn-md btn-secondary display-4" href="https://ateramh.github.io/index.html">HOME</a></div>
 
                     <div class="icons-media-container mbr-white">
                         <div class="card col-12 col-md-6">
@@ -203,7 +203,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you, your suggestion is always appreciated</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="g+ldiEShclqS1NM4F1qCQtql+myZzXkZSVxVzeChRMDSHnEEpofs8+uubFdqpJAJlSHiwZ0F02W2fFPBemNtpE/e4WYbYPGVOLCUrUjjmPxar3boomh2iLWvmmP7EkWy">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="MK4DnemOlmOm+ZlA26wWJnVWnA4VxkzKHM//738kJ/QJwratexc/+rs/9MXQ/MAmU9hTvTnmDp7tv9zhSn6iFasH9CZ10fJnpXuS1ieslRtX+GmBlg+ICwx4EH+9wGDi">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
