--- a/forums.html
+++ b/forums.html
@@ -42,7 +42,7 @@
                          <img src="assets/images/logo-184x184.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="home.html">Atera</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://ateramh.github.io/home.html">Atera</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="header1 cid-ri3ZdW8Bp5 mbr-parallax-background" id="header1-f">
+<section class="engine"><a href="https://mobirise.info/m">site design templates</a></section><section class="header1 cid-ri3ZdW8Bp5 mbr-parallax-background" id="header1-f">
 
     
 
