--- a/what-is-atera.html
+++ b/what-is-atera.html
@@ -42,7 +42,7 @@
                          <img src="assets/images/logo-184x184.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="home.html">Atera</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://ateramh.github.io/home.html">Atera</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">web builder</a></section><section class="header12 cid-ri39Andi0Q mbr-fullscreen mbr-parallax-background" id="header12-4">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="header12 cid-ri39Andi0Q mbr-fullscreen mbr-parallax-background" id="header12-4">
 
     
 
@@ -203,7 +203,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you, your suggestion is always appreciated</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="2skaobf98WsZr0bd1yzjNVIxIWuRruN09e+4rYylWJ7nfUHyeMjtfFwQ32jBX+7c02Ytz7J98CndiuhYzTmn2RGqRoDfRuF3QRmgEZIqK6LMGrVCPSR4tVQ5s2shuZlA">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="RD7kPWqv5+KM8Bu+Sj7cd/85VO7u5LLlwX7plcbhnf8n1ES03Rvzxk7tk/9e0NbMCeAUfNdcBGgHBKP/z3SyyJjMJjYWoxmFIrGyqwYIIsaBcwbTRT3rei5J6GxdASkX">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
